<resources>
    <string name="app_name">Traffic Notifications</string>
    <string name="details_title">Details</string>
    <string name="type">Type:</string>
    <string name="message">Message:</string>
    <string name="id">Id:</string>
    <string name="source">Source:</string>
    <string name="transport">Transport:</string>
    <string name="alarm_name">Alarm name:</string>
    <string name="longitude">Longitude:</string>
    <string name="timestamp">Timestamp:</string>
    <string name="latitude">Latitude:</string>
    <string name="placeholder"><![CDATA[<placeholder for text view with varying width.>]]></string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="random_btn_text">Random Item</string>
    <string name="main_title">Traffic App</string>
    <string name="item_title">Notification</string>
</resources>
